<resources>
    <string name="app_name">QuickNotes</string>
    <!-- Strings used for fragments for navigation -->
    <string name="note_name">Note Name</string>
    <string name="note_content">Note Content</string>
    <string name="add">Add</string>
    <string name="missing_item_field_error">Missing Item Field Error</string>


    <!-- Preference Titles -->


    <string name="settings">Settings</string>
...
